@@ -3,7 +3,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <meta content="text/html; charset=ISO-8859-1"
+  <meta content="text/html; charset=${folder.textEncoding}"
  http-equiv="content-type">
   <title>${folder.title}</title>
   <link href="${folder.stylePath}" rel=stylesheet>
